<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="task2"
            type="com.prueba.hugo.view.task2.Task2ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentMaster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/negro_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/convertir_temperatura"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:id="@+id/txtCelcius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/celcius"
                android:textColor="@color/negro_alpha"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edittCelsius"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:inputType="number"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textColorHint="@color/gris_hint"
                        android:textColor="@color/negro_alpha"
                        android:imeOptions="actionDone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_12sdp"
                        android:afterTextChanged="@{task2::afterTextChangedC}"
                        android:hint="@{task2.hintCelsius}"
                        android:text="@{task2.celsius}"
                        />

                    <TextView
                        android:id="@+id/txtCelsius"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textColorHint="@color/gris_hint"
                        android:textColor="@color/negro_alpha"
                        android:text="@={task2.textCelsius}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/cel"
                        android:visibility="@{task2.showCelsius ? View.VISIBLE : View.GONE}"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txtFah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fahrenheit"
                android:textColor="@color/negro_alpha"
                android:textSize="@dimen/_14sdp"

                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edittFahrenheit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:drawablePadding="@dimen/_5sdp"
                        android:gravity="center"
                        android:inputType="number"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textColorHint="@color/gris_hint"
                        android:textColor="@color/negro_alpha"
                        android:imeOptions="actionDone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_12sdp"
                        android:afterTextChanged="@{task2::afterTextChangedF}"
                        android:hint="@{task2.hintFahrenheit}"
                        android:text="@{task2.fahrenheit}"
                        />


                    <TextView
                        android:id="@+id/txtFahrenheit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textColorHint="@color/gris_hint"
                        android:textColor="@color/negro_alpha"
                        android:text="@={task2.textFahrenheit}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/_12sdp"
                        android:hint="@string/fah"
                        android:visibility="@{task2.showFahrenheit? View.VISIBLE : View.GONE}"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btn"
                style="@style/Button.Primary"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:onClick="@{()-> task2.onClick()}"
                android:text="@string/limpiar"
                app:elevation="@dimen/_2sdp"
                app:iconTint="@android:color/white"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>